--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "firebase": "^9.15.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^1.0.4",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
+    "react-html5-camera-photo": "^1.5.11",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
